Sugati/src/objects/Questionnaire_Question_Category__c.object
<CustomObject>
    <description>A list of categories for each question.</description>
    <fields>
        <fullName>QQC_Introduction_Text__c</fullName>
        <label>Introduction Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QQC_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QQC_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Type</label>
        <referenceTo>Record_Type__c</referenceTo>
        <relationshipLabel>Questionnaire Question Categories</relationshipLabel>
        <relationshipName>Questionnaire_Question_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Questionnaire Question Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QQC_Live__c</columns>
        <columns>QQC_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Clients</fullName>
        <columns>NAME</columns>
        <columns>QQC_Live__c</columns>
        <columns>QQC_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire_Question_Category__c.Client</value>
        </filters>
        <label>Client</label>
    </listViews>
    <listViews>
        <fullName>HS</fullName>
        <columns>NAME</columns>
        <columns>QQC_Live__c</columns>
        <columns>QQC_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire_Question_Category__c.H_S</value>
        </filters>
        <label>H&amp;S</label>
    </listViews>
    <nameField>
        <label>Questionnaire Question Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Question Categories</pluralLabel>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Client Questionnaire Categories</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>H_S</fullName>
        <active>true</active>
        <description>Health &amp; Safty</description>
        <label>H&amp;S</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>